--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ant-design/icons",
+  "name": "antd-icons-modern",
   "version": "5.3.7",
   "repository": "https://github.com/ant-design/ant-design-icons/tree/master/packages/icons-react",
   "license": "MIT",
@@ -29,11 +29,11 @@
     "@types/react-dom": "^16.9.5"
   },
   "dependencies": {
-    "@ant-design/colors": "^7.0.0",
-    "@ant-design/icons-svg": "^4.4.0",
+    "@ant-design/colors": "npm:antd-colors-modern@^7.0.0",
+    "@ant-design/icons-svg": "npm:antd-icons-svg-modern@^4.4.0",
     "@babel/runtime": "^7.11.2",
     "classnames": "^2.2.6",
-    "rc-util": "^5.31.1"
+    "rc-util": "npm:rc-util-modern@^5.31.1"
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.2",
