--- a/packages/icons-svg/package.json
+++ b/packages/icons-svg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ant-design/icons-svg",
+  "name": "antd-icons-svg-modern",
   "version": "4.4.2",
   "sideEffects": false,
   "description": "Abstract nodes for ant design icons.",
@@ -52,10 +52,11 @@
     "@types/rgrove__parse-xml": "^1.1.0",
     "@types/svgo": "^1.3.1",
     "@types/through2": "^2.0.34",
+    "@types/vinyl": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "babel-jest": "^25.1.0",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.3",
     "del": "^5.1.0",
     "eslint": "^7.16.0",
     "globby": "^11.0.0",
